tests/miniJava/neg/001066_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = Main int [ 0 ] ; } }
